Adding styles and body container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<app-header></app-header>
+<div class="centered-preview-mode">
+  <div class="body-container">
+      <app-header></app-header>
+  </div>
+</div>
+
 
 
 
