--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,8 @@
+:root {
+    --background-primary: #f5f5f5;
+    --header-background-primary: #e86e1e;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -7,5 +12,17 @@ body {
 html, body {
     width: 100%;
     height: 100%;
+}
+
+.body-container {
+    height: 480px;
+    width: 320px;
+    background-color: var(--background-primary);
+}
+
+.centered-preview-mode {
+    display: flex;
+    justify-content: center;
+    margin: auto;
 }
   
