--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,19 @@
 <div class="centered-preview-mode">
   <div class="body-container">
       <app-header></app-header>
+      <div class="resizable-content">
+        <div class="time">
+          Maribor pridobljeno 21.10.2016
+        </div>
+        <div class="weather-info">
+          <div class="weather-details">
+            <div class="card">
+              Opis
+            </div>
+            <div class="card">
+              Min, max, ...
+            </div>
+          </div>
+      </div>
   </div>
 </div>
-
-
-
-
-Test
