--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,12 +1,21 @@
+/* Header je visok 44px in je vedno prisoten na vrhu strani, ne glede na »scrolanje« spodnjega dela.
+Barva ozadja headerja je primarna: #e86e1e (uporabi css oz scss spremenljivko). */
 .app-header {
-    height: 44px;
-    background-color: var(--header-background-primary);
-    color: white;
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
+  background-color: var(--header-background-primary);
+  color: white;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  height: 44px;
+}
+
+/* Če je okno široko in visoko 768px ali več, povečaj višino headerja na 56px */
+@media (min-width: 768px) and (min-height: 768px) {
+  .app-header {
+    height: 56px;
   }
+}
