Implementing loader for fetching data from WeatherAPI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,18 +2,6 @@
   <div class="body-container">
       <app-header></app-header>
       <div class="resizable-content">
-        <div class="time">
-          Maribor pridobljeno 21.10.2016
-        </div>
-        <div class="weather-info">
-          <div class="weather-details">
-            <div class="card">
-              Opis
-            </div>
-            <div class="card">
-              Min, max, ...
-            </div>
-          </div>
+        <app-weather></app-weather>
       </div>
-  </div>
 </div>
