--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,6 +21,7 @@ spremenljivko */
     height: 480px;
     width: 320px;
     background-color: var(--background-primary);
+    overflow-y: auto;
 }
 
 .centered-preview-mode {
@@ -73,9 +74,14 @@ contenta (480-44-32px). Če je content širši ali višji, se držijo skupaj in 
 horizontalno v sredino. Če je okno ožje od osnovne širine, se okni s podatki o napovedi pomakneta
 eno pod drugo. */
 .weather-details .card {
-    margin: 2px;
-    border: 1px solid black;
+    margin: 1px;
+    /* border: 1px solid black; */
     width: 100%;
+}
+
+.weather-details .card p {
+    margin-bottom: 3px;
+    margin-top: 0px;
 }
 
 /* Če je okno ožje od osnovne širine, se okni s podatki o napovedi pomakneta
