--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -4,7 +4,7 @@ Barva ozadja headerja je primarna: #e86e1e (uporabi css oz scss spremenljivko). 
   background-color: var(--header-background-primary);
   color: white;
   display: flex;
-  position: relative;
+  position: sticky;
   align-items: center;
   justify-content: center;
   top: 0;
